Fix new rows being zero pixels high and unvisible

--- a/public/style.css
+++ b/public/style.css
@@ -30,6 +30,7 @@ table.spreadsheet td {
     border-bottom: 1px solid #dee2e3;
     font-weight: normal;
     text-align: left;
+    min-height: 1em;
 }
 
 table.spreadsheet td:focus {
